--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,5 @@
-@import "../sass/utils/vars";
-@import "../sass/utils/base";
+@import "./utils/vars";
+@import "./utils/base";
+@import "../sass/_header.scss";
+@import "../sass/mobile-menu.scss";
+@import "../sass/products.scss";
