--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -1,5 +1,158 @@
 @import "./utils/vars";
 
-.products p {
-    margin: 0;
+.products {
+  margin: 0;
+  padding-bottom: 50px;
+  background-image: url(../images/background_mobile.jpg);
+  background-repeat: repeat-y;
+  background-size: 100vw;
+  width: 100vw;
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/backgroud_mobile@2x.jpg);
+    background-repeat: repeat-y;
+    background-size: 100vw;
+  }
+}
+
+.products-narrative {
+  text-align: center;
+  padding-top: 60px;
+  margin: 0;
+  font-family: $basic_font;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21.94px;
+  color: $primary_text_color;
+}
+
+.products h1 {
+  margin: 10px 0 0 0;
+  text-align: center;
+  font-family: $support_font;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 37.71px;
+  color: $primary_text_color;
+  letter-spacing: 4%;
+}
+
+.products_list {
+  padding: 0;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+
+  & .icecream::before {
+    content: url(../images/products_item-1.png);
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -100px;
+    margin: auto;
+
+    width: 200px;
+    height: 213px;
+    background: #9cbe8fb2;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    border-radius: 100px;
+    box-shadow: 0 5.34px 20.03px #0a881740;
+  }
+
+  & .icecoffee::before {
+    content: url(../images/products_item-2.png);
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -100px;
+    margin: auto;
+
+    width: 200px;
+    height: 213px;
+    background: #f8d24eb2;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    border-radius: 100px;
+    box-shadow: 0 5.34px 20.03px #99721740;
+  }
+
+  & .milkshake::before {
+    content: url(../images/products_item-3.png);
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -100px;
+    margin: auto;
+
+    width: 200px;
+    height: 213px;
+    background: #d5753fb2;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    border-radius: 100px;
+    box-shadow: 0 5.34px 20.03px #00000040;
+  }
+}
+
+.products_list-item {
+  margin-top: 120px;
+  position: relative;
+  background-color: aqua;
+  border: 1px solid transparent;
+  border-radius: 24px;
+
+  &:first-child {
+    background-color: #aec6a5;
+  }
+
+  &:nth-child(2n) {
+    background-color: #efd478;
+  }
+
+  &:last-child {
+    background-color: #d6936d;
+  }
+}
+
+.products_list-item p {
+  font-family: $basic_font;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24.64px;
+  text-align: center;
+  padding: 0 60px 90px 60px;
+}
+
+.products_list-name {
+  padding-top: 120px;
+  text-align: center;
+  font-family: $basic_font;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24.38px;
+}
+
+.products_list-item_button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40px;
+  height: 16px;
+  margin-bottom: 20px;
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+
+.products_list-item_button-arrow {
+  width: 40px;
+  height: 16px;
 }
