--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,4 @@
 @import "../sass/_header.scss";
 @import "../sass/mobile-menu.scss";
 @import "../sass/products.scss";
+@import "../sass/about.scss";
