--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,13 @@ a {
   }
 }
 
-.mobile-navigation {
+@media (min-width: 768px) {
+  .mobile-navigation {
+    display: none;
+  }
+}
+
+.mobile-navigation_header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -197,11 +203,6 @@ a {
       -ms-flex-align: center;
           align-items: center;
 }
-@media (min-width: 768px) {
-  .mobile-navigation {
-    display: none;
-  }
-}
 
 .mobile-menu_button {
   display: -webkit-inline-box;
@@ -214,6 +215,9 @@ a {
   background-color: #84A178;
   z-index: 100;
   margin-right: 15px;
+  position: fixed;
+  top: 0;
+  right: 0;
 }
 .mobile-menu_button.is-open {
   position: static;
@@ -224,7 +228,7 @@ a {
   width: 100%;
   height: 100vh;
   position: absolute;
-  top: 45px;
+  top: 0;
   z-index: 5;
   background-color: #84A178;
 }
@@ -235,6 +239,8 @@ a {
   position: fixed;
   width: 100%;
   height: 100vh;
+  background-color: #84A178;
+  overflow-y: hidden;
 }
 
 .mobile-menu_icon {
@@ -568,4 +574,22 @@ a {
   font-weight: 400;
   font-size: 12px;
   line-height: 20.4px;
+}
+
+.advantages_list-item_description:last-child {
+  margin-bottom: 0;
+}
+
+.gallery {
+  padding-top: 20px;
+  background-color: #84A178;
+  position: relative;
+}
+
+.gallery_image {
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  width: 280px;
 }/*# sourceMappingURL=main.css.map */
