--- a/sass/_advantages.scss
+++ b/sass/_advantages.scss
@@ -1,7 +1,7 @@
 @import './utils/vars';
 
 .advantages {
-    padding: 45px 0 0 0;
+    padding: 45px 0 65px 0;
     background-color: $background_color;
 }
 
