--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -143,6 +143,7 @@
 
 .products_list-item_button {
   display: block;
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   width: 40px;
