--- a/css/main.css
+++ b/css/main.css
@@ -398,7 +398,6 @@ a {
 .products_list-item {
   margin-top: 120px;
   position: relative;
-  background-color: aqua;
   border: 1px solid transparent;
   border-radius: 24px;
 }
@@ -896,7 +895,7 @@ a {
   background: rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 100;
+  z-index: 200;
   overflow-y: scroll;
 }
 
@@ -1153,4 +1152,163 @@ body.modal-ingredients-open {
 .modal_ingredients_button:focus {
   background-color: #0A8817;
   color: #FCFCFC;
+}
+
+.body.modal-buynow-open {
+  overflow: hidden;
+}
+
+.modal_buynow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  padding: 30px;
+  background-color: #FCFCFC;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 768px) {
+  .modal_buynow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+.modal-buynow_container {
+  min-width: 240px;
+}
+
+.modal_buynow_title {
+  margin: 0 0 20px 0;
+  font-family: Seymour One, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+}
+
+.modal_buynow_list {
+  padding: 0;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.modal_buynow_list .modal_buynow_icecream::before {
+  content: url(../images/modal_buynow_1.png);
+  width: 132px;
+  height: 132px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 5;
+  width: 132px;
+  height: 140px;
+  background: rgba(156, 190, 143, 0.6980392157);
+  border-radius: 66px;
+  -webkit-box-shadow: 0 5.34px 20.03px rgba(10, 136, 23, 0.2509803922);
+          box-shadow: 0 5.34px 20.03px rgba(10, 136, 23, 0.2509803922);
+}
+.modal_buynow_list .modal_buynow_icecoffee::before {
+  content: url(../images/modal_buynow_2.png);
+  width: 132px;
+  height: 132px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 5;
+  width: 132px;
+  height: 140px;
+  background: rgba(248, 210, 78, 0.6980392157);
+  border-radius: 66px;
+  -webkit-box-shadow: 0 5.34px 20.03px rgba(153, 114, 23, 0.2509803922);
+          box-shadow: 0 5.34px 20.03px rgba(153, 114, 23, 0.2509803922);
+}
+.modal_buynow_list .modal_buynow_milkshake::before {
+  content: url(../images/modal_buynow_3.png);
+  width: 132px;
+  height: 132px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 5;
+  width: 132px;
+  height: 140px;
+  background: rgba(213, 117, 63, 0.6980392157);
+  border-radius: 66px;
+  -webkit-box-shadow: 0 5.34px 20.03px rgba(0, 0, 0, 0.2509803922);
+          box-shadow: 0 5.34px 20.03px rgba(0, 0, 0, 0.2509803922);
+}
+
+.modal_buynow_list-item {
+  position: relative;
+  padding-bottom: 20px;
+  width: 136px;
+  height: 199px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.modal_buynow_list-item p {
+  margin: 0;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  right: 0;
+  display: block;
+  padding-top: 100px;
+  padding-bottom: 20px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+}
+.modal_buynow_list-item:first-child p {
+  border: 2px solid #96af8c;
+  border-top: 2px solid transparent;
+  border-radius: 15px;
+}
+.modal_buynow_list-item:first-child p:hover {
+  background-color: #96af8c;
+}
+.modal_buynow_list-item:first-child p:focus {
+  background-color: #96af8c;
+}
+.modal_buynow_list-item:nth-child(2n) p {
+  border: 2px solid #efd478;
+  border-top: 2px solid transparent;
+  border-radius: 15px;
+}
+.modal_buynow_list-item:nth-child(2n) p:hover {
+  background-color: #efd478;
+}
+.modal_buynow_list-item:nth-child(2n) p:focus {
+  background-color: #efd478;
+}
+.modal_buynow_list-item:last-child p {
+  border: 2px solid #d6936d;
+  border-top: 2px solid transparent;
+  border-radius: 15px;
+}
+.modal_buynow_list-item:last-child p:hover {
+  background-color: #d6936d;
+}
+.modal_buynow_list-item:last-child p:focus {
+  background-color: #d6936d;
 }/*# sourceMappingURL=main.css.map */
