--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -106,7 +106,7 @@
 .products_list-item {
   margin-top: 120px;
   position: relative;
-  background-color: aqua;
+  // background-color: aqua;
   border: 1px solid transparent;
   border-radius: 24px;
 
