--- a/sass/_modal_byunow.scss
+++ b/sass/_modal_byunow.scss
@@ -1,31 +1,11 @@
 @import "../sass/utils/vars";
 
-.body.modal-buynow-open {
+body.modal-buynow-open {
   overflow: hidden;
 }
 
-.modal_buynow {
-  display: flex;
-  justify-content: space-between;
-  transform: scale(1);
+.modal.buynow {
   padding: 30px;
-
-  background-color: $alternative_text_color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  @media (min-width: 768px) {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-
-.modal-buynow_container {
-  min-width: 240px;
 }
 
 .modal_buynow_title {
@@ -168,17 +148,3 @@
     }
   }
 }
-
-// .modal_buynow_list-item__title {
-//   position: absolute;
-//   top: 80px;
-//   left: 0;
-//   right: 0;
-//   display: block;
-//   height: 70px;
-//   padding-top: 70px;
-//   font-family: $basic_font;
-//   font-weight: 700;
-//   font-size: 16px;
-//   line-height: 100%;
-// }
