--- a/sass/_modal_ingredients.scss
+++ b/sass/_modal_ingredients.scss
@@ -1,70 +1,11 @@
 @import "./utils/vars";
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 10px 10px;
-
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 200;
-  overflow-y: scroll;
-}
-
 body.modal-ingredients-open {
   overflow: hidden;
 }
 
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.modal_ingredients_close-button {
-  width: 40px;
-  height: 40px;
-  background-color: transparent;
-  border: 1px solid transparent;
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal_ingredients_close-button_icon {
-  fill: $primary_text_color;
-  width: 20px;
-  height: 20px;
-}
-
-.modal_ingredients {
-  display: flex;
-  justify-content: space-between;
-  transform: scale(1);
+.modal.ingredients {
   padding: 20px;
-
-  background-color: $alternative_text_color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  @media (min-width: 768px) {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-
-.modal_ingredients_container {
-  min-width: 240px;
 }
 
 .modal_ingredients_title {
@@ -110,16 +51,6 @@ body.modal-ingredients-open {
   }
 }
 
-.span1 {
-  width: 43px;
-  height: 44px;
-  padding-top: 3px;
-  background-color: #9cbe8f;
-  border: 2px solid transparent;
-  border-radius: 50%;
-  box-shadow: 0 6px 20px 0 rgba(10, 136, 23, 0.25);
-}
-
 .modal_ingredients_title2 {
   text-align: center;
   margin: 30px 0;
@@ -147,62 +78,5 @@ body.modal-ingredients-open {
 
   &:last-child {
     margin-bottom: 30px;
-  }
-}
-
-.modal_ingredients_form_formfield__input {
-  width: 100%;
-  height: 40px;
-  background-color: rgba(248, 210, 78, 0.1);
-  border: 1px solid $hover_button_color;
-  border-radius: 10px;
-  margin-bottom: 15px;
-  padding-left: 10px;
-
-  &::placeholder {
-    color: $primary_text_color;
-  }
-}
-
-.modal_ingredients_form_formfield__comment {
-  width: 100%;
-  height: 84px;
-  padding: 10px 0 0 10px;
-  background-color: rgba(248, 210, 78, 0.1);
-  border: 1px solid $hover_button_color;
-  border-radius: 10px;
-  position: relative;
-
-  &::placeholder {
-    color: $primary_text_color;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
-}
-
-.modal_ingredients_button {
-  display: block;
-  margin-top: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 42px;
-  padding: 10px 45px;
-  border: 1px solid transparent;
-  border-radius: 10px;
-  background-color: $default_button_color;
-
-  font-family: $basic_font;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 100%;
-
-  &:hover {
-    background-color: $hover_button_color;
-  }
-
-  &:focus {
-    background-color: $hover_button_color;
-    color: $alternative_text_color;
   }
 }
