--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,6 @@
 @import "./footer";
 @import "./modal_ingredients";
 @import "./modal_byunow";
+@import "./modal_readmore";
+@import "./modal_location";
+@import "./modal_franchise";
